<resources>
    <string name="app_name">AppPortfolio</string>
    <string name="title_my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="btn_popular_movies">Popular Movies</string>
    <string name="btn_stock_hawk">Stock Hawk</string>
    <string name="btn_build_it_bigger">Build It Bigger</string>
    <string name="btn_make_your_app_material">Make Your App Material</string>
    <string name="btn_go_ubiquitous">Go Ubiquitous</string>
    <string name="btn_capstone_my_own_app">Capstone: My Own App</string>
</resources>
