<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brian_000.appportfolio.app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_my_nanodegree_apps"
        android:textSize="24sp"
        tools:paddingBottom="@dimen/activity_vertical_margin" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_popular_movies"
        android:background="@color/colorProjectButton"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClickPopularMovies"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorProjectButton"
        android:text="@string/btn_stock_hawk"
        android:layout_marginBottom="16dp"
        android:onClick="onClickStockHawk"/>

    <Button

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorProjectButton"
        android:text="@string/btn_build_it_bigger"
        android:layout_marginBottom="16dp"
        android:onClick="onClickBuildBigger"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorProjectButton"
        android:text="@string/btn_make_your_app_material"
        android:layout_marginBottom="16dp"
        android:onClick="onClickMakeAppMaterial"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorProjectButton"
        android:text="@string/btn_go_ubiquitous"
        android:layout_marginBottom="16dp"
        android:onClick="onClickGoUbiquitous"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorCapstoneButton"
        android:text="@string/btn_capstone_my_own_app"
        android:layout_marginBottom="16dp"
        android:onClick="onClickCapstone"/>
</LinearLayout>
